--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"sass --watch src/scss:public/styles\" \"nodemon server.js\"",
-    "start": "echo \"no start command specified\"",
+    "start": "node server.js",
+    "sass": "sass --watch src/scss:public/styles",
     "build": "sass src/scss:public/styles",
     "test": "echo \"no test command specified\""
   },
